--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .badge-disabled {
-    background-color: #eee;
+    background-color: #ddd;
 }
 
 .button-list-item {
@@ -12,5 +12,5 @@
 }
 
 .text-ghosted {
-    color: #ddd;
+    color: #ccc;
 }
