--- a/style.css
+++ b/style.css
@@ -91,3 +91,53 @@
     color: red;
     font-size: 95%;
 }
+
+/* Collapsible panel */
+.card {
+    font-size: 66%;
+}
+
+input[type='checkbox'] {
+    display: none;
+}
+.lbl-toggle {
+    display: block;
+    transition: all 0.25s ease-out;
+    cursor: pointer;
+}
+
+.lbl-toggle:hover {
+}
+
+.lbl-toggle::before {
+    content: ' ';
+    display: inline-block;
+
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+    border-left: 5px solid currentColor;
+
+    vertical-align: middle;
+    margin-right: .7rem;
+    transform: translateY(-2px);
+
+    transition: transform .2s ease-out;
+}
+
+.collapsible-content {
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height .25s ease-in-out;
+}
+
+.toggle:checked + .lbl-toggle + .collapsible-content {
+    max-height: 1350px;
+}
+.toggle:checked + .lbl-toggle::before {
+    transform: rotate(90deg) translateX(-3px);
+}
+
+.toggle:checked + .lbl-toggle {
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+}
